[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
# Asynchronous runtime for Tokio
tokio = { version = "1", features = ["full"] }

# ORM database
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sea-query = "0.22"

# serialisasi/deserialisasi 
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# manipulate time
chrono = "0.4"

# creation uuid
uuid = { version = "1", features = ["v4"] }